@@ -24,7 +24,7 @@ before or after the first semicolon, even a space, the game will assume that it
 is a comment line.
 
 The following symbols are recognized as valid by the level generator:
- MSPKREA12346789!@#$^&*(abcdefghijklmnopqrstuvwxyzD
+ MSPKREA12346789!@#$^&*(D
 
 Every level must contain *one* P, *one* E or A, and at least one W.
 
@@ -44,9 +44,6 @@ K marks a Key.
 R marks a golden key (originally a Red key).
 
 D marks a secret level exit, which are used during testing.
-
-The lower letters a-z will simply place a letter in the map data.  These are
-the messages you see during the first few levels.
 
 To add a message to the level data, place the message in-between two
 double-quotes (e.g. "This is a level message") and the message (without the
