@@ -7,6 +7,9 @@ VERSION 1.3:
    currently exists.
  - Added in functionality to dynamically resize the window according to user
    specifications both in the command line and as a configuration option.
+ - The old method of displaying messages by having physical letters float
+   around the level has been officially removed from the game entirely, and is
+   no longer supported.  Good riddance.
 
 VERSION 1.002:
 
